fixed spacing in profile

--- a/src/pages/profile/Profile.css
+++ b/src/pages/profile/Profile.css
@@ -15,7 +15,7 @@
 .profile-header {
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 1.5rem;
     padding: 4%;
 }
 
